--- a/.github/workflows/build_full.yml
+++ b/.github/workflows/build_full.yml
@@ -72,24 +72,25 @@ jobs:
         with:
           # Require --nativecomp and --with-* flags, else the deps will not be included properly
           command: |
-            .\emacs-build.cmd --nativecomp --slim --with-rsvg --build
+            .\emacs-build.cmd --nativecomp --slim --with-rsvg --pdf-tools --hunspell --build
           attempt_limit: 5
           attempt_delay: 2000
 
       - name: Package Emacs
         if: runner.os == 'Windows'
-        run: .\emacs-build.cmd --nativecomp --slim --with-rsvg --pack-all
+        run: .\emacs-build.cmd --nativecomp --slim --with-rsvg --pdf-tools --hunspell --pack-all
 
       - name: Build and pack Emacs
         if: runner.os != 'Windows'
         run: |
           chmod 755 ./emacs-build-unix.sh
           mkdir -p ./zips
-          ./emacs-build-unix.sh -s ./git/emacs/ -v ${{ env.EMACS_VER }} -d ./zips
+          #./emacs-build-unix.sh -s ./git/emacs/ -v ${{ env.EMACS_VER }} -d ./zips
 
       # Upload everything
       - name: Upload binaries
-        uses: actions/upload-artifact@v2
+        if: runner.os == 'Windows'
+        uses: actions/upload-artifact@v3
         with:
           name: emacs-packages
           path: zips/*
@@ -103,7 +104,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download binaries
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: emacs-packages
       - run: ls -R
