--- a/.github/workflows/build_full.yml
+++ b/.github/workflows/build_full.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: build
+name: build_full
 
 # Controls when the action will run.
 on:
