--- a/.github/workflows/build_full.yml
+++ b/.github/workflows/build_full.yml
@@ -72,13 +72,13 @@ jobs:
         with:
           # Require --nativecomp and --with-* flags, else the deps will not be included properly
           command: |
-            .\emacs-build.cmd --nativecomp --slim --with-rsvg --pdf-tools --hunspell --build
+            .\emacs-build.cmd --nativecomp --slim --with-rsvg --hunspell --build
           attempt_limit: 5
           attempt_delay: 2000
 
       - name: Package Emacs
         if: runner.os == 'Windows'
-        run: .\emacs-build.cmd --nativecomp --slim --with-rsvg --pdf-tools --hunspell --pack-all
+        run: .\emacs-build.cmd --nativecomp --slim --with-rsvg --hunspell --pack-all
 
       - name: Build and pack Emacs
         if: runner.os != 'Windows'
