--- a/.github/workflows/build_full.yml
+++ b/.github/workflows/build_full.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       MSYS2_DIR: C:\msys64
-      EMACS_REPO: https://github.com/kiennq/emacs.git
+      EMACS_REPO: https://github.com/emacs-mirror/emacs.git
 
     defaults:
       run:
@@ -50,7 +50,7 @@ jobs:
       # This is the shortest job, but in this case it pulls all MSYS/MINGW64
       - name: Clone Emacs
         if: runner.os == 'Windows'
-        run: .\emacs-build.cmd --clone --repo https://github.com/kiennq/emacs.git --depth 1
+        run: .\emacs-build.cmd --clone --repo %EMACS_REPO% --depth 1
 
       - name: Clone Emacs
         if: runner.os != 'Windows'
@@ -73,7 +73,7 @@ jobs:
           # Require --nativecomp and --with-* flags, else the deps will not be included properly
           command: |
             .\emacs-build.cmd --nativecomp --slim --with-rsvg --hunspell --build
-          attempt_limit: 5
+          attempt_limit: 1
           attempt_delay: 2000
 
       - name: Package Emacs
