--- a/.github/workflows/build_full.yml
+++ b/.github/workflows/build_full.yml
@@ -94,7 +94,7 @@ jobs:
         if: runner.os == 'Windows'
         uses: actions/upload-artifact@v4
         with:
-          name: emacs-packages
+          name: emacs-packages-${{ matrix.msystem }}
           path: zips/*
           if-no-files-found: error
 
@@ -108,7 +108,8 @@ jobs:
       - name: Download binaries
         uses: actions/download-artifact@v4
         with:
-          name: emacs-packages
+          pattern: emacs-packages-*
+        merge-multiple: true
       - run: ls -R
 
       # Create release
