--- a/.github/workflows/build_full.yml
+++ b/.github/workflows/build_full.yml
@@ -21,7 +21,10 @@ jobs:
         include:
           - os: windows-latest
             shell: powershell
-            arch: x86_64
+            msystem: MINGW64
+          - os: windows-latest
+            shell: powershell
+            msystem: UCRT64
           - os: ubuntu-latest
             shell: bash
 
@@ -44,7 +47,7 @@ jobs:
         uses: msys2/setup-msys2@v2
         if: runner.os == 'Windows'
         with:
-          msystem: UCRT64
+          msystem: ${{ matrix.msystem }}
           release: false
 
       # This is the shortest job, but in this case it pulls all MSYS/MINGW64
@@ -91,7 +94,7 @@ jobs:
         if: runner.os == 'Windows'
         uses: actions/upload-artifact@v4
         with:
-          name: emacs-packages
+          name: emacs-packages-${{ matrix.msystem }}
           path: zips/*
           if-no-files-found: error
 
@@ -105,7 +108,8 @@ jobs:
       - name: Download binaries
         uses: actions/download-artifact@v4
         with:
-          name: emacs-packages
+          pattern: emacs-packages-*
+          merge-multiple: true
       - run: ls -R
 
       # Create release
