--- a/.github/workflows/build_full.yml
+++ b/.github/workflows/build_full.yml
@@ -52,10 +52,10 @@ jobs:
             shell: powershell
             msystem: UCRT64
             build_options: --with-rsvg --without-mps --hunspell
-          # - os: windows-latest
-          #   shell: powershell
-          #   msystem: UCRT64
-          #   build_options: --variant mps --with-rsvg --with-mps --no-strip --enable-build-details --hunspell
+          - os: windows-latest
+            shell: powershell
+            msystem: UCRT64
+            build_options: --variant mps --with-rsvg --with-mps --no-strip --enable-build-details --hunspell
           - os: ubuntu-latest
             shell: bash
             build_options: --with-rsvg --with-mps --without-xwidgets
